<resources>
    <string name="app_name" translatable="false">Picocrypt-NG</string>
    
    <!-- File Card -->
    <string name="choose_file">Choose a file</string>
    <string name="copying_file">Copying file…</string>
    <string name="choose_file_description">Choose file</string>
    <string name="choose_single_file">Single file</string>
    <string name="choose_multiple_files">Multiple files</string>
    <string name="choose_folder">Folder</string>
    <plurals name="selected_files_count">
        <item quantity="one">%1$d file selected</item>
        <item quantity="other">%1$d files selected</item>
    </plurals>
    
    <!-- Password Card -->
...
